Fix importing the duplicated resources

This patch also makes the import-overwrite code check consistent between
the two places where we do that, in
KisResourceUserOperations::importResourceFileWithUserInput() and in
ResourceImporter::importResources().

BUG:446588
BUG:446743