libs/resourcewidgets/KisResourceUserOperations.h
@@ -21,7 +21,6 @@ public:
     // for example if they import the same resource file (the filename matches)
     // or when they try to create a new resource with the same name and filename
     static bool userAllowsOverwrite(QWidget* widgetParent, QString resourceFilepath);
-    static bool resourceExistsInResourceFolder(QString resourceType, QString filepath);
     static bool resourceNameIsAlreadyUsed(KisResourceModel* resourceModel, QString resourceName, int resourceIdToIgnore = -1);
 
     // used when the user tries to rename a resource to a name that already exists
